Created Animation Blueprint

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/HordeGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/HordeGame")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="HordeGameGameModeBase")
+bAllowMultiThreadedAnimationUpdate=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -11,4 +12,3 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TestMap.TestMap
-
