--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,3 +12,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Maps/TestMap.TestMap
+
